[package]
name = "rust-finding-bigfoot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
redis = { version = "0.23.0", features = ["json"] }
rocket = "0.5.0-rc.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
